--- a/boot-thymeleaf/src/main/resources/templates/m05.html
+++ b/boot-thymeleaf/src/main/resources/templates/m05.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8" xmlns:th="http://www.thymeleaf.org">
     <meta name="viewport"
@@ -53,6 +53,41 @@
 <div th:text="|이름: ${name}|"></div> <!--*-->
 <div th:inline="text">이름: [[${name}]]</div>
 <div>이름: [[${name}]]</div> <!--**-->
+
+<hr>
+<div>
+
+
+
+</div>
+
+<script>
+
+    <!-- 타임리프 표현식을 사용해서 자바스크립트 조작 -->
+    //let name1 = '${name}';
+
+    let name1 = [[${name}]];
+    let num1 = [[${num}]];
+    let dto1 = '[[${dto}]]';
+    let map1 = '[[${map}]]';
+    let names1 = [[${names}]];
+    let list1 = `[[${list}]]`;
+</script>
+
+<script th:inline="javascript">
+    let name2 = [[${name}]];
+    let num2 = [[${num}]];
+    let dto2 = [[${dto}]];
+    let map2 = [[${map}]];
+    let names2 = [[${names}]];
+    let list2 = [[${list}]];
+
+    list2.forEach(item => {
+        document.getElementById("list").innerHTML += `
+        <div> ${item.name} - ${item.num} - ${item.address}</div>
+        `;
+    });
+</script>
 
 
 </body>
