--- a/boot-jpa/src/main/resources/templates/result_scalar.html
+++ b/boot-jpa/src/main/resources/templates/result_scalar.html
@@ -13,5 +13,13 @@
 <h1> result_scalar </h1>
 
 <div th:text="${result}"></div>
+
+
+
+<div th:if="${addressTuple != null}">
+    <div th:text="${addressTuple.get(0,Long)}"></div>
+    <div th:text="${addressTuple.get(1,Double)}"></div>
+</div>
+
 </body>
 </html>
