--- a/boot-security-jwt/src/main/resources/templates/index.html
+++ b/boot-security-jwt/src/main/resources/templates/index.html
@@ -1,7 +1,5 @@
 <!doctype html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -11,17 +9,6 @@
     <link rel="stylesheet" href="http://pinnpublic.dothome.co.kr/cdn/example-min.css">
 </head>
 <body>
-    <div th:replace="~{inc/header :: menu}"></div>
-    <h2>Admin</h2>
+
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
