--- a/boot-security/src/main/resources/templates/join.html
+++ b/boot-security/src/main/resources/templates/join.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="http://pinnpublic.dothome.co.kr/cdn/example-min.css">
 </head>
 <body>
-<h1>Security <small>Join</small></h1>
+
+<div th:replace="~{inc/header :: menu}"></div>
+<h2>Join</h2>
+
 <form method="POST" action="/joinok">
     <table>
         <tr>
@@ -33,6 +36,7 @@
     <div>
         <button>가입하기</button>
     </div>
+    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
 </form>
 </body>
 </html>
