--- a/boot-oauth2/src/main/resources/templates/login.html
+++ b/boot-oauth2/src/main/resources/templates/login.html
@@ -9,14 +9,16 @@
     <link rel="stylesheet" href="http://pinnpublic.dothome.co.kr/cdn/example-min.css">
 </head>
 <body>
-<div th:replace="~{inc/header :: menu}"></div>
-<h2>My</h2>
 
-    <div>
-        <div th:text="${username}"></div>
-        <div th:text="${role}"></div>
-        <div th:text="${#authentication}"></div>
-    </div>
+<div th:replace="~{inc/header ::menu}"></div>
+
+<h2> Login </h2>
+
+<div>
+    <a href="/oauth2/authorization/naver">네이버 로그인</a>
+    <a href="/oauth2/authorization/google">구글 로그인</a>
+
+</div>
 
 </body>
 </html>
